feat: update ERA start date to October 2026 and improve string formatting in assessment header